--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "chat-app-yt": "file:..",
     "lucide-react": "^0.488.0",
     "react": "^18.2.0",
